[package]
name = "nostd"
version = "0.1.0"
authors = ["Samuel Burnham <sam@yatima.io>"]
edition = "2018"

[dependencies]
sp-std = {version = "3", default-features = false}
cid = {version = "0.6.1", default-features = false}
multihash = {version = "0.13.2", default-features = false}
num-bigint = {version = "0.3", default-features = false}
nom = {version = "6", default-features = false}
base-x = {version = "0.2.8", default-features = false}

[dev-dependencies]
quickcheck = {version = "1.0.3", default-features = false}
rand = {version = "0.8.3", default-features = false}
quickcheck_macros = "1.0.0"
